@@ -1,3 +1,5 @@
+- Refactor: Mark ExemptionsGenerationRowResult::exemptedAmount as deprecated and replace with ExemptionsGenerationRowResult::netExemptedAmount
+
 8.2.5 (07-03-2022)
 - Bug fix: Remove RC module version dependency
 - Refactor: Mark TreasuryExemption::valueToExempt as deprecated and replace with TreasuryExemption.netAmountToExempt
